<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Automatic Call Responses</string>
    <string name="title_activity_add_profile">Add Profile</string>
    <string name="title_activity_edit_profile">Edit Profile</string>
    <string name="title_activity_prefs">Settings</string>

    <!-- MainActivity-->
    <string name="bAdd">Add Profile</string>
    <string name="settings">Settings</string>
    <string name="action_settings">Settings</string>

    <!-- PrefsActivity -->
    <string name="activeColor">Active color</string>
    <string name="summaryActiveColor">Enter the color for active profile</string>
    <string name="inactiveColor">Inactive color</string>
    <string name="summaryInactiveColor">Enter the color for inactive profiles</string>
    <string name="onlyContacts">Only contacts</string>
    <string name="summaryOnlyContacts">Only send SMS to my contacts</string>

    <!-- AddProfileActivity -->
    <string name="profileName">Name:</string>
    <string name="hintProfileName">Enter the name for the new profile</string>
    <string name="sms">Message:</string>
    <string name="hintSms">Enter the SMS to send</string>
    <string name="bOk">Ok</string>
    <string name="bCancel">Cancel</string>
    <string name="activate_profile">Activate</string>
    <string name="edit_profile">Edit</string>
    <string name="delete_profile">Remove</string>
    <string name="desactivate_profile">Desactivate</string>
    <string name="sms_service_name">smsservice</string>

</resources>
