<LinearLayout
        android:orientation="vertical"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        xmlns:android="http://schemas.android.com/apk/res/android"
        >

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/profileName"
            android:id="@+id/textView"
            android:paddingTop="15sp"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintProfileName"
            android:id="@+id/editName"/>

    <TextView
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/sms"
            android:id="@+id/textView1"
            android:paddingTop="15sp"/>

    <EditText
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hintSms"
            android:id="@+id/editSms"/>

    <TableLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:paddingTop="15sp"
            android:stretchColumns="*">

        <TableRow
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center">

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bAcept"
                    android:id="@+id/bAcept"
                    android:layout_column="0"/>

            <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/bCancel"
                    android:id="@+id/bCancel"
                    android:layout_column="1"/>
        </TableRow>
    </TableLayout>
</LinearLayout>